syntax = "proto3";

package zrchain.zenbtc;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "zrchain/zenbtc/params.proto";

option go_package = "github.com/zenrocklabs/zenbtc/x/zenbtc/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/zenbtc/params";
  }

  // Queries a list of LockTransactions items.
  rpc LockTransactions(QueryLockTransactionsRequest) returns (QueryLockTransactionsResponse) {
    option (google.api.http).get = "/zenbtc/lock_transactions";
  }

  // Queries a list of ConfirmedUnlockTransactions items.
  rpc ConfirmedUnlockTransactions(QueryConfirmedUnlockTransactionsRequest) returns (QueryConfirmedUnlockTransactionsResponse) {
    option (google.api.http).get = "/zenbtc/confirmed_solana_unlock_transactions";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

message QueryLockTransactionsRequest {}

message QueryLockTransactionsResponse {
  repeated string lock_transactions = 1;
}

message QueryConfirmedUnlockTransactionsRequest {
  string chain = 1;
}

message QueryConfirmedUnlockTransactionsResponse {
  repeated string unlock_transactions = 1;
}
